@@ -365,7 +365,7 @@ class PaymentCybersource extends IsotopePayment
 
 			foreach(array_keys($arrResponses) as $key)
 			{
-				$arrReponseLabels[strtolower(standardize($key))] = $key;
+				$arrReponseLabels[strtolower(standardize($key, true))] = $key;
 			}
 
 			$objTemplate->fields = $this->generateResponseString($arrResponses, $arrReponseLabels);
